# Kate

./: CMakeLists.txt
KateCore/: CMakeLists.txt
KateCore/include/: Lexer.h  OperatorBase.h  Token.h  Tokenizer.h
KateCore/src/: Lexer.cpp
KateLLVM/: CMakeLists.txt
Utils/: CMakeLists.txt
Utils/include/: File.h  FileHandler.h  KateStatus.h
Utils/src/: FileHandler.cpp
